@@ -8,7 +8,7 @@ package Dist::Zilla::PluginBundle::Author::DOHERTY;
 =head1 SYNOPSIS
 
     # in dist.ini
-    [@DOHERTY]
+    [@Author::DOHERTY]
 
 =head1 DESCRIPTION
 
@@ -82,7 +82,7 @@ use Dist::Zilla::Plugin::Twitter                  0.010 qw(); # Support for choo
 use WWW::Shorten::IsGd                                  qw(); # Shorten with WWW::Shorten::IsGd
 
 use Pod::Weaver::Section::BugsAndLimitations   1.102670 qw(); # to read from D::Z::P::Bugtracker
-use Pod::Weaver::PluginBundle::DOHERTY            0.002 qw();
+use Pod::Weaver::PluginBundle::Author::DOHERTY    0.004 qw(); # new name
 
 with 'Dist::Zilla::Role::PluginBundle::Easy';
 
@@ -233,8 +233,8 @@ sub configure {
 
         # File munging
         ( $self->surgical
-            ? 'SurgicalPodWeaver'#[ 'SurgicalPodWeaver' => { config_plugin => '@DOHERTY' } ]
-            : [ 'PodWeaver'         => { config_plugin => '@DOHERTY' } ]
+            ? [ 'SurgicalPodWeaver' => { config_plugin => '@Author::DOHERTY' } ]
+            : [ 'PodWeaver'         => { config_plugin => '@Author::DOHERTY' } ]
         ),
 
         # Build system
