@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 
 {{$NEXT}}
+    * Use new name for Pod::Weaver pluginbundle
 
 0.010     2011-01-24
     * Renamed to Dist::Zilla::PluginBundle::Author::DOHERTY
